Исправление конструкции stream().toList(), не пропускал github